--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -9,11 +9,11 @@ Christians are meant to be evangelists. That means we are meant to tell people t
 
 If you are like me then you have trouble being an evangelist. I find evangelism hard, like going to the dentist. I know I should do it but I don't want to. I'd rather not go and suffer for fear of what will happen if I do go.
 
-Tonight we will hear about a surprising evangelist and perhaps learn from her how to be a happy gospeller. You can read about it in chapter four of John's Gospel. I will be using Richard Moore's translation, *Under the Southern Cross* (USC) for quotations from John's Gospel.^[Richard K. Moore, *Under the Southern Cross: The New Testament in Australian English* (WestBow Press, 2014).]
+Tonight we will hear about a surprising evangelist and perhaps learn from her how to be a happy gospeller. The Eastern Orthodox Church even has a name for her, which sounds like *little light* to me. John tells us about her in chapter four of his Gospel. I will be using Richard Moore's translation, *Under the Southern Cross* (USC) for quotations.^[Richard K. Moore, *Under the Southern Cross: The New Testament in Australian English* (WestBow Press, 2014).]
 
 # Going through Samaria
 
-This story starts with Jesus in unfriendly territory. He had been near the Jordan River but decided he had better get out of there and go back to where he lived, which was a long way off in Galilee. The reason he had to go is that a religious group called the Pharisees found out he was baptizing more people than John the Baptist. The Pharisees were already mad at John the Baptist but now here was Jesus getting even more followers. In fact Jesus wasn't baptizing anyone. His followers, who we call *disciples*, were the ones doing the baptizing. Some of Jesus' followers were originally followers of John the Baptist, so they knew a thing or two about baptizing people as a symbol of repentance.
+The story starts with Jesus in unfriendly territory. He had been near the Jordan River but decided he had better get out of there and go back to where he lived, which was a long way off in Galilee. The reason he had to go is that a religious group called the Pharisees found out he was baptizing more people than John the Baptist. The Pharisees were already mad at John the Baptist but now here was Jesus getting even more followers. In fact Jesus wasn't baptizing anyone. His followers, who we call *disciples*, were the ones doing the baptizing. Some of Jesus' followers originally followed John the Baptist, so they knew a thing or two about putting people under water to signify that they had started on a new life.
 
 To get back home, Jesus had to go through Samaria, which is where the Samaritans lived. Jesus is a Jew, a descendant of Abraham. For a Jew, the right place to worship is Jerusalem. Samaritans are also descendants of Abraham, but for them the right place to worship is not Jerusalem but a place called [Mount Gerizim](https://en.wikipedia.org/wiki/Mount_Gerizim), a place where the [Samaritan religion](https://en.wikipedia.org/wiki/Samaritanism) is still practised to this day. (There are only 750 Samaritans left.)
 
@@ -25,9 +25,9 @@ Given this history, a typical Jewish person looked on Samaritans as heretics (be
 
 # Let me have a drink
 
-Jesus is sitting down by a well when a Samaritan lady comes up. Let's call her Photina. That's what the Eastern Orthodox church says her name is. It means *little light*.
+Jesus is sitting down by a well when a Samaritan woman comes to get some water with her bucket. The Eastern Orthodox Church knows her as Photina. If the ending of her name (*-ina*) is a diminutive (like in Portuguese) the her name means *little light*.
 
-We are told that it is the sixth hour. They counted hours from when the sun came up so we would say it was lunch time, the hottest time of the day. Jesus says,
+We are told that it is the sixth hour. They counted hours from when the sun came up so we would say it was lunch time. That means it is the hottest time of the day when Jesus says to her,
 
 > Let me have a drink.
 
@@ -43,7 +43,7 @@ Here are a few things that are wrong:
 
 Well John tells us why the disciples aren't there -- they've gone into town to get lunch. But that doesn't explain why Jesus is talking to an unaccompanied woman. This would raise a few eyebrows. And it doesn't say why Jesus starts the conversation, and why he starts a conversation with a **Samaritan woman**. This would raise all of the eyebrows that are not already raised. It is just not done. Jesus is breaking a lot of basic rules that his followers would expect him to keep. It's a good thing that they weren't there.
 
-There is something else as well. She is getting water at lunch time. Anyone who walks a long way to get water then carries it all the way back again knows that lunch time is the wrong time to get water because it is the hottest part of the day. ^[See e.g. [Gen 24.11](http://crosswire.org/study/parallelstudy.jsp?key=Genesis+24%3A11#cv).] This is a hint that the woman at the well is an outcast among her own people, an outcast of outcasts. And now some Jewish guy tries to start up a conversation. What does **he** want?
+There is something else as well. She is getting water at lunch time. Anyone who walks a long way to get water then carries it all the way back again knows that lunch time is the wrong time to get water because it is the hottest part of the day. ^[See e.g. [Gen 24.11](http://crosswire.org/study/parallelstudy.jsp?key=Genesis+24%3A11#cv).] This is a hint that the woman at the well is an outcast among her own people, an outcast of outcasts. And now a Jewish stranger tries to start a conversation. What does he want?
 
 # Where's your bucket?
 
@@ -55,13 +55,13 @@ Then Jesus says:
 
 > If only you knew about God's gift and who it is who's saying to you, "Let me have a drink," you would have asked him, and he would have given you running water.
 
-Most English translations say *living water* here, but *running water* is a great translation and gets at what Jesus means. His water is spring water: it doesn't go dry, it's not stagnant, and it's not poisonous like well water can be, especially if your enemies block the well or poison it.
+Most English translations say *living water* here, but *running water* is a great translation and I think it gets at what Jesus means. His water is spring water: it doesn't go dry, it's not stagnant, and it's not poisonous like well water can be, especially if your enemies block the well or poison it.
 
 At this point Photina says:
 
 > Sir, not only do you not have a bucket, but the well is deep; so where are you going to get this running water from?
 
-This indicates that Photina is practical. It could also mean she has a sense of humour and is making fun of the Jewish stranger when she asks about where he's going to get running water. But there is something else. She calls him κυριε, which we usually translate as *Lord* or *Master*. Perhaps she uses this respectful title because he has started to talk about God. In any case, she decides to assess him and his claims about running water.
+This indicates that Photina is practical. It could also mean she has a sense of humour and is making fun of the Jewish stranger when she asks where he's going to get the running water. But there is something else. She calls him κυριε, which we usually translate as *Lord* or *Master*. It is a title of respect and she might be using it because he has started to talk about God. In any case, she decides to assess him and his claims about running water.
 
 > Surely you aren't greater than our ancestor Jacob, are you? It was he who gave us the well, and he used to drink from it himself, as did his sons and his livestock.
 
@@ -73,7 +73,7 @@ Here is what the stranger said when Photina asked him whether he is greater than
 
 > Everyone who has a drink of this water will feel thirsty again, but anyone who has a drink of the water I will give them will never feel thirsty again; instead, the water I will give them will become a spring of water bubbling up to eternal life.
 
-At this point Photina says what could either be a joke or an exhausted plea for a way out of having to come to the well in the middle of the day:
+At this point Photina says what could either be a joke or an exhausted plea for a way out of having to come to the well in the heat of the day:
 
 > Sir, let me have have this water, so that I won't get thirsty or need to come here to draw water.
 
@@ -111,18 +111,30 @@ And then this Jewish prophet says,
 
 # The universal saviour
 
-This encounter started with a Jewish traveller asking a Samaritan woman for a drink. It ends with Jesus doing something that I don't think happens anywhere else in the New Testament: he tells someone directly that he is the Messiah. Everything about this encounter is surprising. On one side is the God-man, on the other is an outcast of outcasts. They start to talk and have a conversation in spite of the usual prejudices. The conversation turns to things divine, and the God-man says that God seeks those who truly seek him, Spirit seeking spirit. During the conversation the woman has a growing realisation of who she is speaking to: first he's a stranger, then he's a devout man, then he's a prophet. Finally she has an incredible thought: could this actually be the Messiah?
+This encounter started with a Jewish traveller asking a Samaritan woman for a drink. It ends with Jesus doing something that I don't think happens anywhere else in the New Testament: he tells someone plainly that he is the Messiah. Everything about this encounter is surprising. On one side is the God-man, on the other is an outcast of outcasts. Despite the great divide between them they start a conversation that quickly turns to things divine. The God-man says that God seeks those who truly seek him, Spirit seeking spirit. During the conversation the woman has a growing realisation of who she is speaking to: first he's a stranger, then he's a devout man, then he's a prophet. Finally she has an incredible thought: could this actually be the Messiah?
 
-Johns tells us that she went to the town and said,
+Johns tells us that she then went into the town to tell everyone what happened. Here's what she said:
 
 > Come and see a person who's told me everything I've ever done. Surely he couldn't be the Messiah, could he?
 
-Those people did come and see Jesus, and invited him to stay with them. (Imagine that -- a Samaritan town invites a Jewish preacher to stay.) What's more, they ended up believing that he is the Messiah -- some because of what the woman said and others because they heard him speak themselves. Here is how John puts it:
+Those people did come and see Jesus, and invited him to stay with them. (Imagine that -- a Samaritan town invites a Jewish teacher to stay. It goes against all expectations.) What's more, they end up believing that he is the Messiah -- some because of what the woman said and others because they hear him speak themselves. Here is how John puts it:
 
 > They said to the woman, 'We no longer have faith only on the basis of what you've had to say, for now we've listened to him ourselves and know that he really is the universal Saviour.'
 
-This woman is the first evangelist to non-Jews. She becomes an evangelist because she encounters the prophet. She has a growing realisation of who he is. She knows he is a prophet because he knows everything about her. She even thinks that he could be the Messiah.
+As far as I know, this woman is the first evangelist to non-Jews. She becomes an evangelist because she encounters the prophet. He asks for a drink then tells her to ask God for his free gift of running water. She has a growing realisation of who the Jewish stranger is. She knows he is a prophet because he knows everything about her. She even thinks that he could be the Messiah. After that her people come to a collective realistaion that not only is he the prophet, but he is the saviour of all nations.
 
-The woman at the well became a gospeller because she encountered Jesus. He gave her something that bubbles up inside her like a spring. It's like running water. It doesn't care for stagnant arguments like "Where's the right hill to worship?" Instead, it draws people to the God who is spirit, who seeks those who seek him in spirit and in truth. Jesus is not only the prophet -- he is the universal Saviour.
+The woman at the well became a gospeller because she encountered Jesus. He gave her something that bubbles up inside her like a spring. It's like running water. It doesn't care for stagnant arguments like "Where's the right hill to worship?" Instead, it draws people to the God who is spirit, who seeks those who seek him in spirit and in truth. A bit later on, in chapter 7.37-39, John tells us that this running water is in fact God's own Spirit:
 
-Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no exception. After being tortured she was killed by being thrown down a dry well. So she continues to tell us the good news about the prophet who knows everything we've done and still offers the free gift of running water that bubbles up to eternal life.
+> On the last day, the most important day of the Festival, Jesus stood up and said at the top of his voice, 'If anyone is thirsty, let them come to me and have a drink. For the person who comes to faith in me, just as the Scripture passage said, "Rivers of running water will flow from within them."' (He said this about the Spirit, whom those who had come to faith in him were about to receive...)
+
+There is much more in the story of the woman at the well but luckily for you we are aware of the time. In short, Jesus' followers come back and find Jesus talking to this Samaritan woman. No doubt they are shocked by the scene but don't say "What are you after?" or "Why are you talking to her?" When she takes off back to the village, they start saying he should eat something. He then says that his food is to complete the work he's been sent to do. I think that he has just been doing that work, sending out an outcast with a joyful message about drawing water from the springs of salvation.^[See [Isaiah chapter 12](http://crosswire.org/study/parallelstudy.jsp?key=Isaiah+12%3A3#cv).]
+
+He tells his followers,
+
+> All you have to do is to look up at the paddocks to see that the grain is already golden, ready for harvesting... I sent you to reap something you didn't labour over; others have done the hard work, and you have benefited from it.
+
+This is not the only place that Jesus talks about looking up. When he announces his mission (see [Luke 4.18-19](http://crosswire.org/study/parallelstudy.jsp?key=Luke+4%3A18#cv)), he reads from the part in Isaiah which talks about proclaiming the good news to the poor, binding up those with crushed hearts, setting captives free, making the blind look up, sending out the traumatized with forgiveness, and announcing the jubilee, the acceptable year of the Lord.
+
+There's something else in what Jesus says to his followers that I had never noticed before, and that's the bit about others having done the work. I always thought that was about the Jewish prophets. However, in this case the woman was a Samaritan. She already knew about the Messiah and was expecting him. She must have learnt this from her own people -- the Samaritans -- a people who everyone else regarded as heretics. So one take away lesson from tonight is that you might be surprised by the groundwork that God has already done in a person who you look on as a heretic, impostor, or lost cause.
+
+Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no different. After being tortured she was thrown down a dry well and died. Another book by John, the Apocalypse, assures us that despite what this corrupt world did to her, she is safe in a place where there is "a river containing life-giving water, sparkling like a crystal, flowing from the throne of God and of the Lamb."^[Rev 22.1 USC.] Even in this corrupt world she continues to shine as a little light, enlightening us with good news about the prophet who knows everything we've done and offers the free gift of running water that bubbles up to eternal life.
