--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -25,7 +25,7 @@ Given this history, a typical Jewish person looked on Samaritans as heretics (be
 
 # Let me have a drink
 
-Jesus is sitting down by a well when a Samaritan woman comes to get some water with her bucket. The Eastern Orthodox Church knows her as Photina. If the ending of her name (*-ina*) is a diminutive (like in Portuguese) then her name means *little light*.
+Jesus is sitting down by a well when a Samaritan woman comes to get some water with her bucket. The Eastern Orthodox Church knows her as Photina. If the ending of her name (*-ina*) is a diminutive (like in Portuguese) then it means *little light*.
 
 We are told that it is the sixth hour. They counted hours from when the sun came up so we would say it was lunch time. That means it is the hottest time of the day when Jesus says to her,
 
