--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -51,7 +51,7 @@ After Jesus says "Let me have a drink", she says,
 
 > How is it that you, a Jewish man, are asking for a drink from me, a Samaritan Woman?
 
-Then Jesus says:
+Then he says:
 
 > If only you knew about God's gift and who it is who's saying to you, "Let me have a drink," you would have asked him, and he would have given you running water.
 
