--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -55,7 +55,7 @@ Then he says:
 
 > If only you knew about God's gift and who it is who's saying to you, "Let me have a drink," you would have asked him, and he would have given you running water.
 
-Most English translations say *living water* here, but *running water* is a great translation and I think it gets at what Jesus means. His water is spring water: it doesn't go dry, it's not stagnant, and it's not poisonous like well water can be, especially if your enemies block the well or poison it.
+Most English translations say *living water* here, but *running water* is a great translation and I think it gets at what Jesus means. His water is spring water: it doesn't go dry, it's not stagnant, and it's not poisonous like well water can be, especially if your enemies block the well or poison it.^[I owe the insight about not being stagnant to Mikhalina D.]
 
 At this point Photina says:
 
