--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -117,7 +117,7 @@ Johns tells us that she then went into the town to tell everyone what happened. 
 
 > Come and see a person who's told me everything I've ever done. Surely he couldn't be the Messiah, could he?
 
-Those people did come and see Jesus, and invited him to stay with them. (Imagine that -- a Samaritan town invites a Jewish teacher to stay. It goes against all expectations.) What's more, they end up believing that he is the Messiah -- some because of what the woman said and others because they hear him speak themselves. Here is how John puts it:
+Those people did come and see Jesus, and invited him to stay with them. Imagine that -- a Samaritan town invites a Jewish teacher to stay. It goes against all expectations. What's more, they end up believing that he is the Messiah -- some because of what the woman said and others because they hear him speak themselves. Here is how John puts it:
 
 > They said to the woman, 'We no longer have faith only on the basis of what you've had to say, for now we've listened to him ourselves and know that he really is the universal Saviour.'
 
