--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -121,7 +121,7 @@ Those people did come and see Jesus, and invited him to stay with them. Imagine 
 
 > They said to the woman, 'We no longer have faith only on the basis of what you've had to say, for now we've listened to him ourselves and know that he really is the universal Saviour.'
 
-As far as I know, this woman is the first evangelist to non-Jews. She becomes an evangelist because she encounters the prophet. He asks for a drink then tells her to ask God for his free gift of running water. She has a growing realisation of who the Jewish stranger is. She knows he is a prophet because he knows everything about her. She even thinks that he could be the Messiah. After that her people come to a collective realistaion that not only is he the prophet, but he is the saviour of all nations.
+As far as I know, this woman is the first evangelist to non-Jews. She becomes an evangelist because she encounters the prophet. He asks for a drink then tells her to ask God for his free gift of running water. She has a growing realisation of who the Jewish stranger is. She knows he is a prophet because he knows everything about her. She even thinks that he could be the Messiah. After that her people come to a collective realisation that not only is he the prophet, but he is the saviour of all nations.
 
 The woman at the well became a gospeller because she encountered Jesus. He gave her something that bubbles up inside her like a spring. It's like running water. It doesn't care for stagnant arguments like "Where's the right hill to worship?" Instead, it draws people to the God who is spirit, who seeks those who seek him in spirit and in truth. A bit later on, in chapter 7.37-39, John tells us that this running water is in fact God's own Spirit:
 
