--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -137,4 +137,4 @@ This is not the only place that Jesus talks about looking up. When he announces 
 
 There's something else in what Jesus says to his followers that I had never noticed before, and that's the bit about others having done the work. I always thought that was about the Jewish prophets. However, in this case the woman was a Samaritan. She already knew about the Messiah and was expecting him. She must have learnt this from her own people -- the Samaritans -- a people who everyone else regarded as heretics. So one take away lesson from tonight is that you might be surprised by the groundwork that God has already done in a person who you look on as a heretic, impostor, or lost cause.
 
-Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no different. After being tortured she was thrown down a dry well and died. Another book by John, the Apocalypse, assures us that despite what this corrupt world did to her, she is safe in a place where there is "a river containing life-giving water, sparkling like a crystal, flowing from the throne of God and of the Lamb."^[Rev 22.1 USC.] Even in this corrupt world she continues to shine as a little light, enlightening us with good news about the prophet who knows everything we've done and offers the free gift of running water that bubbles up to eternal life.
+Photina is honoured as a saint by the Eastern Orthodox Church, which calls her "equal to the apostles." Ancient tradition says that she was so renowned that she came to the attention of Nero. Coming to the attention of a dictator is usually a bad thing, and her case is no different. After being tortured she was thrown down a dry well and died. Another book by John, the Apocalypse, assures us that despite what this corrupt world did to her, she is safe in a place where there is "a river containing life-giving water, sparkling like a crystal, flowing from the throne of God and of the Lamb."^[Rev 22.1 USC.] Even in this corrupt world she continues to shine her little light, enlightening us with good news about the prophet who knows everything we've done and offers the free gift of running water that bubbles up to eternal life.
