Say it was the same John.

--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -21,7 +21,7 @@ Back then, Jews and Samaritans did not get along. To know why they didn't get al
 
 > You shall have no gods except me [[Exodus 20.3](http://crosswire.org/study/parallelstudy.jsp?key=Exodus+20%3A3#cv)]
 
-Given this history, a typical Jewish person looked on Samaritans as heretics (because they worshipped in the wrong place) and impostors (because they had questionable ancestry). It looks like some of Jesus' followers didn't like Samaritans either. In Luke's Gospel we are told about one time when James and John, two of Jesus' first followers, wanted God to burn a Samaritan village.^[See [Luke 9.51-56](http://crosswire.org/study/parallelstudy.jsp?key=Luke+9%3A51#cv).]
+Given this history, a typical Jewish person looked on Samaritans as heretics (because they worshipped in the wrong place) and impostors (because they had questionable ancestry). It looks like some of Jesus' followers didn't like Samaritans either. In Luke's Gospel we are told about when two of Jesus' followers named James and John wanted God to burn a Samaritan village.^[See [Luke 9.51-56](http://crosswire.org/study/parallelstudy.jsp?key=Luke+9%3A51#cv).] This is the same John who tells us about the woman at the well.
 
 # Let me have a drink
 
