Change no of Samaritans.

--- a/content/posts/2018-10-13.md
+++ b/content/posts/2018-10-13.md
@@ -15,7 +15,7 @@ Tonight we will hear about a surprising evangelist and perhaps learn from her ho
 
 The story starts with Jesus in unfriendly territory. He had been near the Jordan River but decided he had better get out of there and go back to where he lived, which was a long way off in Galilee. The reason he had to go is that a religious group called the Pharisees found out he was baptizing more people than John the Baptist. The Pharisees were already mad at John the Baptist but now here was Jesus getting even more followers. In fact Jesus wasn't baptizing anyone. His followers, who we call *disciples*, were the ones doing the baptizing. Some of Jesus' followers originally followed John the Baptist, so they knew a thing or two about putting people under water to signify that they had started on a new life.
 
-To get back home, Jesus had to go through Samaria, which is where the Samaritans lived. Jesus is a Jew, a descendant of Abraham. For a Jew, the right place to worship is Jerusalem. Samaritans are also descendants of Abraham, but for them the right place to worship is not Jerusalem but a place called [Mount Gerizim](https://en.wikipedia.org/wiki/Mount_Gerizim), a place where the [Samaritan religion](https://en.wikipedia.org/wiki/Samaritanism) is still practised to this day. (There are only 750 Samaritans left.)
+To get back home, Jesus had to go through Samaria, which is where the Samaritans lived. Jesus is a Jew, a descendant of Abraham. For a Jew, the right place to worship is Jerusalem. Samaritans are also descendants of Abraham, but for them the right place to worship is not Jerusalem but a place called [Mount Gerizim](https://en.wikipedia.org/wiki/Mount_Gerizim), a place where the [Samaritan religion](https://en.wikipedia.org/wiki/Samaritanism) is still practised to this day. (There are less than one thousand Samaritans now living.)
 
 Back then, Jews and Samaritans did not get along. To know why they didn't get along we need to know a bit of history, which you can read about in [2 Kings 17.24-41](http://crosswire.org/study/parallelstudy.jsp?key=II+Kings+17%3A24#cv). Assyria invaded the northern part of Israel called Samaria and it fell in 721 BC. Until then its people practised the Jewish religion. The Assyrian king brought in people from five outside nations. A bit later those people started getting eaten by lions so the king of Assyria thought he had better send in a Hebrew priest to teach them how to worship the God of Israel. However, those people kept their old gods too, which is breaking the first of the ten commandments God gave to Moses:
 
