--- a/content/posts/2018-12-29.md
+++ b/content/posts/2018-12-29.md
@@ -8,7 +8,7 @@ date: '2018-12-29'
 
 # The ten commandments
 
-Our church has been going through the ten commandments, and now we have reached the last one. God gave these commandments to the Israelites after he set them free. The commandments tell us how to honour God and respect each other. A country that obeys these commands will be set free, but any nation that ignores them is in danger of slavery.
+Our church has been going through the ten commandments and now we have reached the last one. God gave these commandments to the Israelites after he set them free. The commandments tell us how to honour God and respect each other. A country that obeys these commands will be set free, but any nation that ignores them is in danger of reverting to slavery.
 
 The children of Israel had just been set free from Egypt. Over the last four hundred years they had gone from a position of great privilege to the worst possible situation; they began as guests of Egypt's governor (namely Joseph) and ended up as slaves who toiled under the Egyptian sun making bricks for Pharoah. Only a slave knows what it is like to spend your entire life working hard for someone else, then to end your days with nothing.
 
@@ -18,7 +18,7 @@ The first three commandments are about honouring the true God, not idols of the 
 
 The next commandment is about resting from work on the seventh day. Just as God made everything in six days then rested on the seventh, so God's people must rest on the seventh day. There are six days in which to work; the seventh day is dedicated to God. We are commanded to stop doing what we normally do and have a day of rest every week. This is an antislavery command. Australia took a great step backwards when it did away with the Sabbath. We used to have a special day when shops stayed closed; now all days are working days and people are slowly going out of their minds.
 
-The following command tells us to respect our parents. This is the kind of thing that a good society does well and a bad society does poorly. A country that treats its parents well is blessed, but one that treats them badly is in danger of being cursed. Here is how the final book of the Hebrew Bible ends:
+The next command tells us to respect our parents. This is the kind of thing that a good society does well and a bad society does poorly. A country that treats its parents well is blessed, but one that treats them badly is in danger of being cursed. Here is how the final book of the Hebrew Bible ends:
 
 > Remember the law of Moses My servant, even the statutes and ordinances which I commanded him in Horeb for all Israel. Behold, I am going to send you Elijah the prophet before the coming of the great and terrible day of the Lord. He will restore the hearts of the fathers to their children and the hearts of the children to their fathers, so that I will not come and smite the land with a curse. [Mal 4.4-6 NASB](https://crosswire.org/study/parallelstudy.jsp?key=Malachi+4%3A4#cv)
 
