--- a/content/posts/2018-12-29.md
+++ b/content/posts/2018-12-29.md
@@ -36,7 +36,7 @@ The remaining five commandments are about your neighbours:
 
 [Ex. 20.13-17 NASB](https://crosswire.org/study/parallelstudy.jsp?key=Exodus+20%3A13#cv)
 
-All except the last one tell you how to treat your neighbours. There is a common thread: breaking these four commandments will destroy lives, break hearts, and cause people to lose confidence and trust. To break one of these four is to commit a crime against humanity. If you want to obey these four then you only need to practise one golden rule, which Jesus put like this:
+All except the last one tell you how to treat your neighbours. There is a common thread: breaking these four commandments will destroy lives, break hearts, and cause people to lose confidence and trust. To break one of these four is to commit a crime against humanity. If you want to obey these four then you only need to practise one golden rule, which Jesus puts like this:
 
 > In everything, therefore, treat people the same way you want them to treat you, for this is the Law and the Prophets. [Matt 7.12 NASB](https://crosswire.org/study/parallelstudy.jsp?key=Matthew+7%3A12#cv)
 
@@ -74,7 +74,7 @@ What's wrong with that? What's wrong delighting in my neighbour's house? Nothing
 
 # The evil eye
 
-One of the most sublime parts of the New Testament is the sermon on the mount, chapters five to seven of Matthew's Gospel. Jesus tells his his followers that they need to go beyond the righteousness of the experts in the Law or miss out on God's kingdom. They need to be the world's light, to shine a light that makes the world give glory to God. Jesus spends a large part of the sermon talking about commandments like "Do not murder" and "Do not commit adultery". He focusses on the heart, saying that hateful words are as bad as murder, and looking at a woman lustfully is as bad as committing adultery.
+One of the most sublime parts of the New Testament is the sermon on the mount, chapters five to seven of Matthew's Gospel. In this speech Jesus tells his followers that they need to go beyond the righteousness of the experts in the Law or miss out on God's kingdom. They need to be the world's light, to shine a light that makes the world give glory to God. Jesus spends a large part of the sermon talking about commandments like "Do not murder" and "Do not commit adultery". He focusses on the heart, saying that hateful words are as bad as murder, and looking at a woman lustfully is as bad as committing adultery.
 
 Later on Jesus teaches about wealth.^[Matt 6.19-22.] He says to store up treasure in heaven, not on earth. Then he says that if you have a good eye your whole body will be filled with light, but if you have an evil eye your whole body will be in deep darkness. Next he says that you can't serve God and Mammon, the money god. It's one or the other.
 
