--- a/content/posts/2018-12-29.md
+++ b/content/posts/2018-12-29.md
@@ -118,6 +118,6 @@ Here is a good summary of the ten commandments: *Godliness with contentment is g
 
 # Conclusion
 
-The ten commandments begin by telling us to worship the one true God and not to make or bow down to idols and not to discredit his name. They tell us not to do evil to our neighbours and end with a command not to covet what others have. In the sermon on the mount, Jesus teaches us to be full of light, with a spirit that wants good for our neighbours. He warns against the darkness of an evil eye that hates it when others have what we want. However, our human nature works against us and we need a cure for our soul. What is it? Who is it? The cure for our souls is Jesus Christ, the rescuer, the life-giving Spirit. Here is how he ends his teaching on wealth in the sermon on the mount:
+The ten commandments begin by telling us to worship the one true God and not to make or bow down to idols and not to discredit his name. They tell us not to do evil to our neighbours and end with a command not to covet what others have. In the sermon on the mount, Jesus teaches us to be full of light, with a spirit that wants good for our neighbours. He warns against the darkness of an evil eye that hates it when others have what we want. However, our human nature works against us and we need a cure for our soul. What is it? Who is it? The cure for our souls is Jesus Christ, the rescuer, the life-giving Spirit. To finish, here is how he finishes his teaching on wealth in the sermon on the mount:
 
 > So then, don't be anxious, asking "What are we to eat?" or "What are we to drink" or "What are we to wear?" ... For your heavenly Father is well aware that you need all these things. But your first priority is to go in search of God's kingdom and his concept of what is right, then all of these things will be yours as well. So don't be anxious about tomorrow, for tomorrow will be anxious about itself. Each day has enough problems of its own. [Matt 6.31-34 USC]
